--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
     "version": 2,
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/dist/user-datamanagement/index.html"
-      }
+        { "src": "/[^.]+", "dest": "/index.html" }
     ]
   }
   
