--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
     "version": 2,
+    "builds": [{ "src": "angular.json", "use": "@vercel/static-build" }],
     "routes": [
+        
         { "src": "/[^.]+", "dest": "/index.html" }
     ]
   }
