--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
-    "builds": [{ "src": "angular.json", "use": "@vercel/static-build" }],
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/static-build"
+        }
+    ],
     "routes": [
         
         { "src": "/[^.]+", "dest": "/index.html" }
